--- a/rpc-consumer/pom.xml
+++ b/rpc-consumer/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>rpc-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>top.yuyufeng</groupId>
+            <artifactId>my-rpc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
