--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,20 @@
     <artifactId>rpc</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+
     <modules>
         <module>rpc-consumer</module>
         <module>rpc-service</module>
         <module>rpc-provider</module>
-        <module>my-rpc</module>
+        <module>rpc-core</module>
     </modules>
+
 
     <dependencies>
         <dependency>
@@ -24,6 +32,7 @@
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -36,5 +45,6 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 </project>
