--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>my-rpc</artifactId>
+    <artifactId>rpc-core</artifactId>
 
 
 </project>
