--- a/rpc-provider/pom.xml
+++ b/rpc-provider/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>top.yuyufeng</groupId>
-            <artifactId>my-rpc</artifactId>
+            <artifactId>rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
