--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -41,6 +41,13 @@
             <version>1.0.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.14.Final</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
