--- a/rpc-consumer/pom.xml
+++ b/rpc-consumer/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.1.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
