--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -12,6 +12,10 @@
 
     <artifactId>rpc-core</artifactId>
 
+    <properties>
+        <spring-version>4.1.7.RELEASE</spring-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -46,6 +50,26 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.14.Final</version>
         </dependency>
+
+        <!-- Sping核心依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
 
 
     </dependencies>
